--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}CongeFacile{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        {# Epilogue google font #}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        {# Inter google font #}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('assets/css/output.css') }}">
         {% endblock %}
 
         {% block javascripts %}
+            <script src="https://cdn.tailwindcss.com"></script>
+            <script src="{{ asset('assets/js/components-scripts.js') }}"></script>
         {% endblock %}
     </head>
     <body>
-        {% block body %}
-        Hello World!
-        
+        {% block header %}
+            {% include '' %}
         {% endblock %}
+        
+
+        
+            {% block body %}
+                 {% include 'acceuil_profil.html.twig' %}
+            {% endblock %}
+      
+        
+       
     </body>
 </html>
